[gd_scene load_steps=12 format=3 uid="uid://b21g746ev7f8v"]

[ext_resource type="Script" path="res://Assets/Scripts/radar_grid.gd" id="1_7egi5"]
[ext_resource type="PackedScene" uid="uid://cleqcfouqc6gl" path="res://Assets/GUIs/radar/medium_monster_radar.tscn" id="2_jdmjo"]
[ext_resource type="PackedScene" uid="uid://6vybww4f30oi" path="res://Assets/GUIs/radar/small_monster_radar.tscn" id="3_c3cou"]
[ext_resource type="Texture2D" uid="uid://c0ltkv3jmab1i" path="res://Assets/GUIs/radar/Radar_grid.png" id="5_iu5ra"]
[ext_resource type="AudioStream" uid="uid://biqbdgyy77ghl" path="res://Sound/SoundEffects/Submarine_SFX/sonar_ping.wav" id="5_y2867"]
[ext_resource type="Texture2D" uid="uid://blnoouxcqfy8d" path="res://Assets/GUIs/radar/ping.png" id="6_ib23n"]
[ext_resource type="Texture2D" uid="uid://bd72me1qjiflg" path="res://Assets/GUIs/radar/Radar_grid_layer.png" id="6_u515x"]

[sub_resource type="CircleShape2D" id="CircleShape2D_3a70g"]
radius = 256.32

[sub_resource type="Animation" id="Animation_esah2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 240)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Ping:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.000244141, 240)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Ping:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_223pj"]
resource_name = "expand"
length = 0.75
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 240), Vector2(0, 240)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(0.75, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(25, 25)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Ping:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.000244141, 240), Vector2(0.000244141, 240)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Ping:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(0.75, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(25, 25)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yrc2c"]
_data = {
"RESET": SubResource("Animation_esah2"),
"expand": SubResource("Animation_223pj")
}

[node name="radar-grid" type="SubViewportContainer"]
script = ExtResource("1_7egi5")
mediumMonsterScene = ExtResource("2_jdmjo")
smallEnemyScene = ExtResource("3_c3cou")

[node name="SubViewport" type="SubViewport" parent="."]
handle_input_locally = false
size = Vector2i(576, 576)
render_target_update_mode = 4

[node name="spawn_timer" type="Timer" parent="SubViewport"]
wait_time = 8.5
autostart = true

[node name="small_monster_timer" type="Timer" parent="SubViewport"]
wait_time = 5.0
autostart = true

[node name="medium_monster_timer" type="Timer" parent="SubViewport"]
wait_time = 7.5
autostart = true

[node name="ping" type="Timer" parent="SubViewport"]
wait_time = 5.0
autostart = true

[node name="RadarGrid" type="Sprite2D" parent="SubViewport"]
position = Vector2(288, 288)
texture = ExtResource("5_iu5ra")

[node name="radar_ping" type="StaticBody2D" parent="SubViewport"]
position = Vector2(288, 487)
scale = Vector2(0.1, 0.1)

[node name="Ping" type="Sprite2D" parent="SubViewport/radar_ping"]
position = Vector2(0.000244141, 240)
texture = ExtResource("6_ib23n")

[node name="CollisionShape2D" type="CollisionShape2D" parent="SubViewport/radar_ping"]
position = Vector2(0, 240)
shape = SubResource("CircleShape2D_3a70g")

[node name="radar_animation" type="AnimationPlayer" parent="SubViewport/radar_ping"]
libraries = {
"": SubResource("AnimationLibrary_yrc2c")
}

[node name="RadarGridLayer" type="Sprite2D" parent="SubViewport"]
position = Vector2(288, 544)
texture = ExtResource("6_u515x")

[node name="sonar_ping_noise" type="AudioStreamPlayer2D" parent="."]
position = Vector2(0, 3.05176e-05)
stream = ExtResource("5_y2867")

[connection signal="timeout" from="SubViewport/spawn_timer" to="." method="_on_spawn_timer_timeout"]
[connection signal="timeout" from="SubViewport/small_monster_timer" to="." method="_on_small_monster_timer_timeout"]
[connection signal="timeout" from="SubViewport/medium_monster_timer" to="." method="_on_medium_monster_timer_timeout"]
[connection signal="timeout" from="SubViewport/ping" to="." method="_on_ping_timeout"]
